--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "description": "OpenTelemetry auto-instrumentation for Magento 2 Framework",
     "type": "library",
     "license": "MIT",
+    "version": "v0.0.1",
     "autoload": {
         "psr-4": {
             "Codewave\\OpenTelemetry\\Magento\\": "src/"
